--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ anyio==4.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens
 astunparse==1.6.3
 async-lru==2.0.4
 attrs==25.1.0
@@ -25,8 +25,8 @@ charset-normalizer==3.4.1
 click==8.1.8
 clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
 cloudpathlib==0.20.0
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+colorama
+comm
 confection==0.1.5
 contourpy==1.3.1
 coqpit-config==0.1.2
@@ -37,8 +37,8 @@ cymem==2.0.11
 Cython==3.0.12
 datasets==3.3.1
 dateparser==1.1.8
-debugpy @ file:///C:/b/abs_bf9oo2vhxp/croot/debugpy_1736269476451/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+debugpy
+decorator
 defusedxml==0.7.1
 dill==0.3.8
 distro==1.9.0
@@ -47,8 +47,8 @@ dotenv==0.9.9
 einops==0.8.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 encodec==0.1.1
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+exceptiongroup
+executing
 fastjsonschema==2.21.1
 filelock==3.17.0
 flatbuffers==25.2.10
@@ -79,13 +79,13 @@ httpx==0.28.1
 huggingface-hub==0.28.1
 idna==3.10
 imageio==2.37.0
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
+importlib_metadata
 inflect==7.5.0
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/bld/rattler-build_ipython_1738421304/work
+ipykernel
+ipython
 ipywidgets==8.1.5
 isoduration==20.11.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+jedi
 Jinja2==3.1.5
 jiter==0.9.0
 joblib==1.4.2
@@ -99,8 +99,8 @@ jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///C:/b/abs_beftpbuevw/croot/jupyter_core_1718818307097/work
+jupyter_client
+jupyter_core
 jupyter_server==2.15.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.3.6
@@ -120,7 +120,7 @@ Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib-inline
 mdurl==0.1.2
 mistune==3.1.2
 ml_dtypes==0.5.1
@@ -135,7 +135,7 @@ namex==0.0.8
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nest_asyncio
 networkx==3.4.2
 nltk==3.9.1
 notebook==7.3.3
@@ -148,23 +148,23 @@ opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.0
 overrides==7.7.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+packaging
 pandas==2.2.3
 pandocfilters==1.5.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+parso
+pickleshare
 pillow==11.1.0
 pipwin==0.5.2
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
+platformdirs
 pooch==1.8.2
 preshed==3.0.9
 prometheus_client==0.21.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1737453357274/work
+prompt_toolkit
 propcache==0.2.1
 proto-plus==1.26.0
 protobuf==5.29.3
-psutil @ file:///C:/b/abs_b5gv3mn55h/croot/psutil_1736371546320/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+psutil
+pure_eval
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
@@ -173,21 +173,21 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydub==0.25.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+Pygments
 pyjsparser==2.7.1
 pyparsing==3.2.1
 PyPrind==2.11.3
 pysbd==0.3.4
 pySmartDL==1.3.4
 python-crfsuite==0.9.11
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dateutil
 python-dotenv==1.0.1
 python-json-logger==3.3.0
 pytz==2025.1
 pywin32==308
 pywinpty==2.0.15
 PyYAML==6.0.2
-pyzmq @ file:///C:/b/abs_f3yte6j5yn/croot/pyzmq_1734711069724/work
+pyzmq
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
@@ -204,7 +204,7 @@ scipy==1.13.1
 Send2Trash==1.8.3
 setuptools==75.8.0
 shellingham==1.5.4
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+six
 smart-open==7.1.0
 sniffio==1.3.1
 sounddevice==0.5.1
@@ -215,9 +215,7 @@ spacy==3.7.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
-SudachiDict-core==20250129
-SudachiPy==0.6.10
+stack_data
 sympy==1.13.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
@@ -234,20 +232,20 @@ tokenizers==0.20.3
 torch==2.6.0+cu118
 torchaudio==2.6.0+cu118
 torchvision==0.21.0+cu118
-tornado @ file:///C:/b/abs_7cyu943ybx/croot/tornado_1733960510898/work
+tornado
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+traitlets
 transformers==4.46.2
 typeguard==4.4.2
 typer==0.15.1
 types-python-dateutil==2.9.0.20241206
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+typing_extensions
 tzdata==2025.1
 tzlocal==5.3
 uri-template==1.3.0
 urllib3==2.3.0
 wasabi==1.1.3
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+wcwidth
 weasel==0.4.1
 webcolors==24.11.1
 webencodings==0.5.1
@@ -259,4 +257,4 @@ widgetsnbextension==4.0.13
 wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.18.3
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zipp
